# datasetgen-ng

./: README.md  datasetgen.json-example  pyproject.toml
src/: answer_generator.py  approval_checker.py  chat_venice_api.py  config.py  database.py  dataset_exporter.py  main.py  question_generator.py  summarizer.py
