[tool.poetry]
name = "datasetgen-ng"
version = "0.1.0"
description = "Dataset generator for finetuning"
authors = ["Juraj Bednar <juraj@bednar.io>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.25"
langchain-openai = "^0.3.18"
pydantic = "^2.0.0"
langchain-ollama = "^0.3.3"
numpy = "^2.2.6"

[tool.poetry.scripts]
datasetgen = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
